fix the archive links wrapping

--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -39,7 +39,7 @@ ul.posts-archive {
 }
 
 ul.posts > li,
-ul.posts-archive > li {
+ul.posts-archive li {
     list-style: none;
 }
 
